Consolidate SkillManager/SkillsManager duplicate implementations into one canonical SkillManager in com.skyblock.core.manager: find every cl
By Jarvis agent Forge.